--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <h3 class="text-2xl font-bold text-blue-400">Base</h3>
                         <p class="text-4xl font-black text-white my-4">R$ 40</p>
                         <ul class="space-y-3 text-gray-300 flex-grow">
-                            <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivo MP3</li>
+                            <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivo WAV</li>
 
                         </ul>
                         <button class="mt-8 w-full bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 rounded-lg transition">Selecionar</button>
@@ -98,7 +98,7 @@
                         <h3 class="text-3xl font-bold text-white text-center mt-4">Exclusivo</h3>
                         <p class="text-5xl font-black text-white my-4 text-center">R$ 80</p>
                         <ul class="space-y-3 text-gray-300 flex-grow">
-                            <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivos MP3</li>
+                            <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivo WAV</li>
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Beat único pra você</li>
                         </ul>
                         <button class="mt-8 w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition accent-glow">Selecionar</button>
@@ -107,7 +107,7 @@
                         <h3 class="text-2xl font-bold text-blue-400">Personalizado</h3>
                         <p class="text-4xl font-black text-white my-4">R$ 100</p>
                         <ul class="space-y-3 text-gray-300 flex-grow">
-                            <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivos MP3</li>
+                            <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivo WAV</li>
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Beat único pra você</li>
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Contato pelo WhatsApp</li>
                         </ul>
@@ -140,9 +140,6 @@
                     <p class="text-gray-400 mt-2">Entre em contato diretamente pelos links abaixo.</p>
                 </div>
                 <div class="glass-effect rounded-xl p-8 md:p-12 flex flex-col items-center space-y-6">
-                    <a href="https://wa.me/82999521144" target="_blank" class="w-full md:w-2/3 bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg transition transform hover:scale-105 text-center flex items-center justify-center gap-2">
-                        Falar no WhatsApp
-                    </a>
                     <a href="mailto:prodbyxand@gmail.com" class="w-full md:w-2/3 bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg transition transform hover:scale-105 text-center flex items-center justify-center gap-2">
                         Enviar um E-mail
                     </a>
