--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
                     <p class="text-gray-400 mt-2">Escolha o ideal para o seu projeto.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
-                    <div class="glass-effect rounded-xl p-8 border border-blue-500/50 flex flex-col">
+                    <div id="basediv" class="glass-effect rounded-xl p-8 border border-blue-500/50 flex flex-col">
                         <h3 class="text-2xl font-bold text-blue-400">Base</h3>
                         <p class="text-4xl font-black text-white my-4">R$ 40</p>
                         <ul class="space-y-3 text-gray-300 flex-grow">
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivo WAV</li>
 
                         </ul>
-                        <button class="mt-8 w-full bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 rounded-lg transition">Selecionar</button>
+                        <a href="#contato" class="mt-8 w-full text-center bg-gray-700 hover:bg-blue-600 text-white font-semibold py-3 rounded-lg transition">Negociar</a>
                     </div>
-                    <div class="glass-effect rounded-xl p-8 border-2 border-blue-500 transform md:scale-110 shadow-2xl shadow-blue-500/20 flex flex-col">
+                    <div id="exclusivodiv" class="glass-effect rounded-xl p-8 border border-blue-500/50 flex flex-col hover:">
                         <div class="text-center">
                             <span class="text-sm font-bold bg-blue-500 text-white py-1 px-4 rounded-full">MAIS POPULAR</span>
                         </div>
@@ -153,9 +153,10 @@
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Arquivo WAV</li>
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Beat único pra você</li>
                         </ul>
-                        <button class="mt-8 w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition accent-glow">Selecionar</button>
+                        <a href="#contato" class="mt-8 w-full text-center bg-gray-700 hover:bg-blue-600 text-white font-semibold py-3 rounded-lg transition hover:">Selecionar</a>
+                        
                     </div>
-                    <div class="glass-effect rounded-xl p-8 border border-blue-500/50 flex flex-col">
+                    <div id="personalizadodiv" class="glass-effect rounded-xl p-8 border border-blue-500/50 flex flex-col">
                         <h3 class="text-2xl font-bold text-blue-400">Personalizado</h3>
                         <p class="text-4xl font-black text-white my-4">R$ 100</p>
                         <ul class="space-y-3 text-gray-300 flex-grow">
@@ -163,7 +164,7 @@
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Beat único pra você</li>
                             <li class="flex items-center"><svg class="w-5 h-5 text-blue-400 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Contato pelo WhatsApp</li>
                         </ul>
-                        <a href="#contato" class="mt-8 w-full text-center bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 rounded-lg transition">Negociar</a>
+                        <a href="#contato" class="mt-8 w-full text-center bg-gray-700 hover:bg-blue-600 text-white font-semibold py-3 rounded-lg transition">Negociar</a>
                     </div>
                 </div>
             </div>
