--- a/index.html
+++ b/index.html
@@ -203,14 +203,19 @@
             </div>
         </section>
     </main>
-
+    
     <footer class="bg-gray-900/50 border-t border-gray-800">
+        <br>
+        <br>
         <div class="container mx-auto px-6 py-8 text-center text-gray-400">
             &copy; 2025 <a href="https://github.com/gvmzin" target="_blank" class="text-400 hover:text-blue-500 transition">gvmzin</a>. Todos os direitos reservados.
         </div>
+        <br>
+        <br>
+        <br>
     </footer>
 
-    <div id="player-container" class="fixed bottom-0 left-0 right-0 bg-gray-900/80 backdrop-blur-md border-t border-gray-700 p-4 z-50 transform translate-y-full transition-transform duration-300">
+    <div id="player-container" class="fixed bottom-0 left-0 right-0 bg-gray-900/80 backdrop-blur-md border-t border-gray-700 p-4 z-[70] transform translate-y-full transition-transform duration-300">
         <div class="container mx-auto flex items-center gap-4">
             <button id="player-play-pause" class="text-white bg-blue-600 rounded-full p-2"></button>
             <img id="player-art" src="https://placehold.co/40x40/0a0a0a/3b82f6?text=X" alt="Arte do Beat" class="w-12 h-12 rounded-md object-cover">
